--- a/style.css
+++ b/style.css
@@ -89,7 +89,6 @@ html, body {
 }
 
 /* About Me */
-/* About Me */
 .about-me {
     text-align: center;
     padding: 4% 10%;
@@ -144,5 +143,70 @@ html, body {
 }
 
 
+/* Portfolio */
+.portfolio {
+    max-width: 1200px;
+    margin: auto;
+    padding: 50px 0;
+}
 
-  
+.section-title {
+    text-align: center;
+    font-size: 3rem;
+    margin-bottom: 1em;
+    color: #333;
+}
+
+.projects-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.project {
+    display: flex;
+    align-items: center;
+    margin-bottom: 50px;
+}
+
+.project-image img {
+    border-radius: 10px;
+    width: 300px;
+    margin-right: 30px;
+}
+
+.project-details {
+    flex-grow: 1;
+}
+
+.project-details h3 {
+    font-size: 1.75rem;
+    color: #333;
+}
+
+.project-details p {
+    font-size: 1.25rem;
+    color: #666;
+}
+
+.project-details h3 a {
+    text-decoration: none; 
+    color: inherit; 
+    display: inline; 
+    background-color: transparent; 
+}
+
+@media (max-width: 768px) {
+    .project {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .project-image img {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+
+    .project-details {
+        text-align: center;
+    }
+}
