--- a/style.css
+++ b/style.css
@@ -47,6 +47,10 @@ html, body {
     background-color: #0056b3;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 /* WELCOME PAGE */
 .main-content {
     display: flex;
@@ -399,4 +403,8 @@ html, body {
     .social-links a {
         margin: 0 5px;
     }
+}
+
+html {
+    scroll-behavior: smooth;
 }
